--- a/cliente/package.json
+++ b/cliente/package.json
@@ -28,6 +28,7 @@
     "reactstrap": "^9.2.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
