--- a/cliente/package.json
+++ b/cliente/package.json
@@ -12,6 +12,7 @@
     "docxtemplater": "^3.38.0",
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
+    "html5-qrcode": "^2.3.8",
     "js-cookie": "^3.0.5",
     "next": "^13.5.3",
     "pizzip": "^3.1.4",
